--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "labook-backend",
+  "name": "labeddit-backend",
   "version": "1.0.0",
   "description": "O projeto Labook é uma rede social com o objetivo de promover a conexão e interação entre pessoas. Quem se cadastrar no aplicativo poderá criar e curtir publicações.",
   "main": "index.js",
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/gabrielsan179/labook-backend.git"
+    "url": "git+https://github.com/gabrielsan179/Labeddit-backend.git"
   },
   "keywords": [
     "projeto backend",
@@ -36,9 +36,9 @@
   "author": "Gabriel Santos Da Silva",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/gabrielsan179/labook-backend/issues"
+    "url": "https://github.com/gabrielsan179/Labeddit-backend/issues"
   },
-  "homepage": "https://github.com/gabrielsan179/labook-backend#readme",
+  "homepage": "https://github.com/gabrielsan179/Labeddit-backend#readme",
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.13",
